# DataDesigner

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  conftest.py  example_allow_resize.py  mkdocs.yml  pyproject.toml
.agents/skills/datadesigner-docs/: SKILL.md
.github/workflows/: build-docs.yml  build-fern-docs.yml  build-notebooks.yml  check-colab-notebooks.yml  ci.yml  cla.yml  docs-preview.yml  health-checks.yml  publish-fern-devnotes.yml  semantic-pull-requests.yml
architecture/: cli.md  dataset-builders.md  models.md
docs/: index.md  installation.md  quick-start.md  welcome.md
docs/code_reference/: column_configs.md  config_builder.md  data_designer_config.md  mcp.md  models.md  run_config.md
docs/colab_notebooks/: 1-the-basics.ipynb  2-structured-outputs-and-jinja-expressions.ipynb  3-seeding-with-a-dataset.ipynb  4-providing-images-as-context.ipynb  5-generating-images.ipynb  6-editing-images-with-image-context.ipynb
docs/concepts/: architecture-and-performance.md  columns.md  custom_columns.md  person_sampling.md  processors.md  seed-datasets.md  tool_use_and_mcp.md  traces.md  validators.md  workflow-chaining.md
docs/concepts/mcp/: configure-mcp-cli.md  enabling-tools.md  mcp-providers.md  safety-and-limits.md  tool-configs.md
docs/concepts/models/: configure-model-settings-with-the-cli.md  custom-model-settings.md  default-model-settings.md  inference-parameters.md  model-configs.md  model-providers.md
docs/css/: mkdocstrings.css  style.css
docs/devnotes/: .authors.yml  index.md
docs/devnotes/posts/: deep-research-trajectories.md  design-principles.md  have-it-your-way.md  owning-the-model-stack.md  rqa.md  vlm-long-document-understanding.md
docs/js/: toc-toggle.js
docs/notebook_source/: 1-the-basics.py  2-structured-outputs-and-jinja-expressions.py  3-seeding-with-a-dataset.py  4-providing-images-as-context.py  6-editing-images-with-image-context.py  _README.md
docs/notebooks/: .gitignore  1-the-basics.ipynb  2-structured-outputs-and-jinja-expressions.ipynb  3-seeding-with-a-dataset.ipynb
docs/overrides/: main.html
docs/plugins/: discover.md  example.md  overview.md
docs/recipes/: cards.md
docs/recipes/mcp_and_tooluse/: basic_mcp.md  pdf_qa.md
docs/recipes/vlm_long_doc/: frontier_judge.md  multi_page_windowed_qa.md  nemotron_parse_ocr.md  page_classification.md  seed_dataset_preparation.md  single_page_qa.md  text_qa.md  visual_qa.md  whole_document_qa.md
docs/scripts/: build_notebooks_cached.sh  generate_colab_notebooks.py
fern/: AGENTS.md  README.md  docs.yml  fern.config.json
fern/assets/data-designer-got-skills/: trace-baseline.html  trace-skill.html
fern/components/: Authors.tsx  BadgeLinks.tsx  BlogCard.tsx  MetricsTable.tsx  NotebookViewer.tsx  TrajectoryViewer.tsx
fern/components/devnotes/: .authors.yml  authors-data.ts
fern/components/notebooks/: 1-the-basics.json  1-the-basics.ts  2-structured-outputs-and-jinja-expressions.json  2-structured-outputs-and-jinja-expressions.ts  3-seeding-with-a-dataset.json  3-seeding-with-a-dataset.ts  4-providing-images-as-context.json  4-providing-images-as-context.ts  5-generating-images.json  5-generating-images.ts
fern/scripts/: fern-release-version.py  ipynb-to-fern-json.py
fern/styles/: blog-card.css
fern/versions/: latest.yml  older.yml  v0.5.8.yml  v0.5.9.yml
plans/668/: audio-video-context.md
plans/workflow-chaining/: workflow-chaining.md
scripts/: health_checks.py  publish.sh  test_license_headers.py  update_license_headers.py
scripts/benchmarks/: benchmark_cli_startup.py  benchmark_mcp_io.py
src/data_designer/: __init__.py  errors.py  logging.py  plugin_manager.py
src/data_designer/cli/: __init__.py  main.py  ui.py  utils.py
src/data_designer/config/: base.py  column_configs.py  column_types.py  columns.py  config_builder.py  data_designer_config.py  dataset_builders.py  datastore.py  default_model_settings.py  errors.py  exports.py  interface.py  models.py  preview_results.py  processors.py  run_config.py  sampler_constraints.py  sampler_params.py  seed.py  seed_source.py  seed_source_types.py  validator_params.py
src/data_designer/engine/: compiler.py  configurable_task.py  errors.py  model_provider.py  secret_resolver.py  validation.py
src/data_designer/essentials/: __init__.py
src/data_designer/interface/: data_designer.py  errors.py  results.py
src/data_designer/plugins/: __init__.py  errors.py  plugin.py  registry.py
tests/: conftest.py  test_logging.py  test_plugin_manager.py
tests/cli/: conftest.py  test_cli_utils.py
tests/cli/commands/: test_download_command.py  test_list_command.py  test_models_command.py  test_providers_command.py  test_reset_command.py
tests/cli/controllers/: test_download_controller.py  test_model_controller.py  test_provider_controller.py
tests/cli/forms/: test_field.py  test_form.py  test_model_builder.py  test_provider_builder.py
tests/cli/repositories/: test_model_repository.py  test_persona_repository.py  test_provider_repository.py
tests/cli/services/: test_download_service.py  test_model_service.py  test_provider_service.py
tests/config/: test_columns.py  test_config_builder.py  test_data_designer_config.py  test_default_model_settings.py  test_models.py  test_processors.py  test_sampler_constraints.py  test_sampler_params.py  test_seed.py  test_seed_source.py  test_validator_params.py
tests/config/analysis/: conftest.py  test_column_statistics.py  (+1 more)
tests/engine/: conftest.py  test_compiler.py  test_configurable_task.py  test_engine_errors.py  test_model_provider.py  test_secret_resolver.py  test_validation.py
tests/essentials/: test_init.py
tests/interface/: test_data_designer.py  test_results.py
tests/plugins/: test_plugin.py  test_plugin_registry.py
tests_e2e/: pyproject.toml
tests_e2e/src/data_designer_e2e_tests/: mcp_demo_server.py
tests_e2e/src/data_designer_e2e_tests/plugins/column_generator/: impl.py
tests_e2e/src/data_designer_e2e_tests/plugins/seed_reader/: impl.py
tests_e2e/tests/: test_e2e.py  test_mcp_demo.py
(+330 files in other folders)
