# =============================================================================
# WORKSPACE CONFIGURATION (not a publishable package)
# =============================================================================
# This pyproject.toml defines the uv workspace for the DataDesigner monorepo.
# It is NOT a package itself—see `package = false` below. The [project] section
# exists only to satisfy pyproject.toml structural requirements.
#
# Subpackages are located in packages/ and each has its own pyproject.toml.
# See WORKSPACE.md for full documentation on the namespace package structure.
# =============================================================================

[project]
name = "data-designer-workspace"
version = "0.0.0"  # Placeholder, never used since package = false
description = "DataDesigner monorepo workspace"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Workspace members - each package contributes to the `data_designer` namespace
[tool.uv.workspace]
members = [
    "packages/data-designer-config",
    "packages/data-designer-engine",
    "packages/data-designer",
]

[tool.uv]
# IMPORTANT: This root is NOT a package. It only defines workspace configuration.
package = false
required-version = ">=0.7.10"
dev-dependencies = [
    "pre-commit>=4.0.0,<5",
    "ruff>=0.14.10,<1",
]

[dependency-groups]
dev = [
    "jsonpath-ng>=1.5.3,<2",
    "pytest>=8.3.3,<9",
    "pytest-asyncio>=0.24.0,<1",
    "pytest-cov>=7.0.0,<8",
    "pytest-env>=1.2.0,<2",
    "pytest-httpx>=0.35.0,<1",
    "pre-commit>=4.0.0,<5",
]
docs = [
    "jupytext>=1.16.0,<2",
    "mike>=2.1.3,<3",
    "mkdocs-jupyter>=0.25.1,<1",
    "mkdocs-material>=9.6.22,<10",
    "mkdocs-redirects>=1.2.2,<2",
    "mkdocs>=1.6.1,<2",
    "mkdocstrings-python>=1.18.2,<2",
    "mkdocstrings>=0.30.1,<1",
]
notebooks = [
    "datasets>=4.0.0,<5",
    "ipykernel>=6.29.0,<7",
    "jupyter>=1.0.0,<2",
    "pillow>=12.0.0,<13",
]
recipes = [
    "bm25s>=0.2.0,<1",
    "pymupdf>=1.24.0,<2",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
env = ["DISABLE_DATA_DESIGNER_PLUGINS=true"]

[tool.coverage.run]
omit = ["**/engine/models/telemetry.py"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie (misc lints)
    "TID",   # flake8-tidy-imports (ban relative imports)
    "UP006", # List[A] -> list[A]
    "UP007", # Union[A, B] -> A | B
    "UP045", # Optional[A] -> A | None
]
ignore = [
    "ANN401", # Dynamically typed expressions (Any)
]

[tool.ruff.lint.isort]
known-first-party = ["data_designer", "data_designer_e2e_tests"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
