[project]
name = "data-designer-e2e-tests"
version = "0.0.1"
requires-python = ">=3.10"

dependencies = [
  "data-designer",
]

[tool.uv.sources]
data-designer = { path = "../packages/data-designer" }

[dependency-groups]
dev = [
  "pytest>=8.3.3,<9",
]

[project.entry-points."data_designer.plugins"]
demo-column-generator = "data_designer_e2e_tests.plugins.column_generator.plugin:column_generator_plugin"
demo-seed-reader = "data_designer_e2e_tests.plugins.seed_reader.plugin:seed_reader_plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
env = [
  # ensure plugins are enabled
  "DISABLE_DATA_DESIGNER_PLUGINS=false",
]

[tool.uv]
package = true
required-version = ">=0.7.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_designer_e2e_tests"]
